fix: layout issue when screen width is 320px

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -6999,6 +6999,10 @@ body {
 }
 
 @media not all and (min-width: 768px) {
+  .max-md\:p-1 {
+    padding: 0.25rem;
+  }
+
   .max-md\:px-1 {
     padding-left: 0.25rem;
     padding-right: 0.25rem;
