--- a/src/component/Main/App/Questionnaires/QuestionCard/index.css
+++ b/src/component/Main/App/Questionnaires/QuestionCard/index.css
@@ -1,7 +1,11 @@
 .other-input > label {
-  flex: 0 1 auto;
+  flex: 0 auto;
 }
 
 .other-input > div {
-  flex: 1 0 auto;
+  flex: 1 auto;
+}
+
+.other-input div[data-slot="description"] {
+  white-space: nowrap;
 }
